8/24/05 (relf)
  * lasieve-asm.h renamed to siever-config.h

8/23/05 (Brian Gladman)
  * minor change to define strcasecmp as _strcmpi for VC++ and
    to include the 'fake' VC++ unistd.h file in if.c  Replace
	the define of _MSC_VER in ecm4c.c in order to simplify 
	the use of a VC++ config file.
   
8/23/05 (Brian Gladman)
  * some minor changes to allow VC++ to use the inline version of 
  	MULMOD32 instead of a subroutine (VC++ inline assembler can't 
	deal directly with structures) 
  * removal of special VC++ versions of if.c and if.h as the 
    standard versions now work
  * changed a define in /piii/lasieve-asm.h	to be right way round
    (is now '#define modinv32 asm_modinv32', was reversed)
  * added {} brackets in gnfs-lasieve4e.c to avoid need for C99
    with an 'in-code' declaration

8/22/05 (asl)
  * Some code and defines cleanup in blanczos64.c

8/22/05 (relf)
  * Minor header fixes and cleanups
  * Applied Dmitri Gribenko's patches to Makefiles (w/ minor postfixes)
  * Makefile.ppc and Makefile.x86_64 now joined into Makefile since 
    they do generic things while Makefile.x86 does x86-specific things
  * TODO: make single Makefiles for all targets

8/20/05 (relf)
  * example pol5/rsa512* moved to tests/rsa512_pol5/
  * lasieve4/piii/mpsq-hack.c moved to lasieve4/mpqs.c and shared
  * x86_64 siever now works 
  * x86_64 assembler code is added to gnfs-lasieve4e.c (but it seems pointless)

8/19/05 (asl)
  * Renamed BIGENDIAN define to GGNFS_BIGENDIAN due to collision with
    winsock2.h

8/19/05 (Brian Gladman)
  * Lots of changes to restore broken VC++ compilation

8/19/05 (relf)
  * common code from lasieve4/ and pol5/ moved to src/ and shared
  * extra types definitions removed in favor of #including ggnfs.h
  * pol5 fixed with respect to suppost non-i386 platforms
  * most "(unsigned) long long" types changed to "(u)int64_t"
  * TODO: unify used types, e.g., use the same name for "u64", "u64_t", "uint64_t" etc.